file-search: ignore symlinks

https://bugzilla.gnome.org/show_bug.cgi?id=790889